--- a/PPl3/Views/Home/Index.cshtml
+++ b/PPl3/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
 
                 <div class="profile_seller profile_seller_@position" @*onclick="window.location.href='/Home/findHost?id=@item.userId&choseIdAmenity=@ViewBag.choseIdAmenity'"*@>
                     <div class="img_profile">
-                        <img class="img_seller" src="@p_user.user_profile.FirstOrDefault().user_avatar" alt="">
+                        <img class="img_seller" src="@p_user.user_profile.FirstOrDefault().user_avatar" alt="" >
                     </div>
                     <div class="profile_behind">
                     </div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="profile_left profile_left_@position">
                         <div class="profile_left_box">
-                            <div class="img_seller_profile" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat">
+                            <div class="img_seller_profile" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat" onclick="window.location.href='/home/profile?id=@p_user.id'">
                             </div>
                             <span class="logo_shield"><i class="fa-solid fa-shield"></i></span>
                             <span class="name_seller">@p_user.account_name</span>
