--- a/PPl3/Views/Home/profile.cshtml
+++ b/PPl3/Views/Home/profile.cshtml
@@ -4,7 +4,7 @@
 }
 
 @{
-    PPl3.Models.PPL3Entities3 db = new PPl3.Models.PPL3Entities3();
+    PPl3.Models.PPL3Entities db = new PPl3.Models.PPL3Entities();
     PPl3.Models.user p_user = ViewBag.userfind;
     int pos = 0;
     string tmpBD;
