--- a/PPl3/Areas/User/Views/HomeUser/profile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/profile.cshtml
@@ -4,7 +4,7 @@
 }
 
 @{
-    PPl3.Models.PPL3Entities3 db = new PPl3.Models.PPL3Entities3();
+    PPl3.Models.PPL3Entities db = new PPl3.Models.PPL3Entities();
     PPl3.Models.user tmp_user = (PPl3.Models.user)HttpContext.Current.Session["user"];
     PPl3.Models.user p_user = (PPl3.Models.user)HttpContext.Current.Session["user"];
     int useridcontroller = ViewBag.is_user_id;
