--- a/PPl3/Areas/User/Views/HomeUser/profile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/profile.cshtml
@@ -224,7 +224,7 @@
                                         <span>@p_user.user_personalInfor.FirstOrDefault().legal_name's confirmed information</span>
                                     </div>
                                     <ul class="confirmed_list">
-                                        <li><i class="fa-solid fa-check"></i>Email address</li>
+                                        <li><i class="fa-solid fa-check"></i>@p_user.user_personalInfor.FirstOrDefault().email_address</li>
                                     </ul>
                                 </div>
                                 @{
