--- a/PPl3/Areas/User/Views/HomeUser/profile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/profile.cshtml
@@ -34,7 +34,7 @@
     <title>Guest profile - T|.|N|.|T</title>
     <link rel="icon" href="https://seeklogo.com/images/A/airbnb-logo-1D03C48906-seeklogo.com.png">
     <link rel="stylesheet" href="~/ExtraFiles/assets/css/gird.css">
-    <link rel="stylesheet" href="~/ExtraFiles/assets/css/profile.css">
+    <link rel="stylesheet" href="~/ExtraFiles/assets/css/profile.css?v=3">
     <link rel="stylesheet" href="~/ExtraFiles/assets/css/headerGuest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
